[gd_scene load_steps=5 format=3 uid="uid://ccdblvlvp4kxe"]

[ext_resource type="Script" path="res://game_world/player/player.gd" id="1_5v8ax"]
[ext_resource type="Texture2D" uid="uid://bft12e6qruhiv" path="res://game_world/player/image-removebg-preview.png" id="2_2n78t"]
[ext_resource type="Texture2D" uid="uid://cqv8flg20fpqi" path="res://game_world/player/cloud2.png" id="3_nbixn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7lw2f"]
size = Vector2(96, 92)

[node name="player" type="Area2D"]
script = ExtResource("1_5v8ax")
food_drop_time = 1.0

[node name="Blanko" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_2n78t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 6)
shape = SubResource("RectangleShape2D_7lw2f")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(-3, 18)
scale = Vector2(0.18, 0.18)
texture = ExtResource("3_nbixn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
